--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,13 +1,22 @@
 -#  This file is app/views/movies/index.html.haml
 %h2 All Movies
+= form_tag movies_path, :method => :get do
+  Include:
+  - @all_ratings.each do |rating|
+    = rating
+    = check_box_tag "ratings[#{rating}]", 1, (checked = true if @select.include?(rating)), :id => 'ratings_#{rating}' 
+  = submit_tag 'Refresh', :id => "ratings_submit"
+  
 
 %table#movies.table.table-striped.col-md-12
   %thead
     %tr
-      %th Movie Title
+      //%th Movie Title
+      %th{class: @css_title}= link_to 'Movie Title', movies_path(sort: 'title'), id: 'title_header'
       %th Rating
-      %th Release Date
+      %th{class: @css_release_date}= link_to 'Release Date', movies_path(sort: 'release_date'), id: 'release_date_header'
       %th More Info
+  
   %tbody
     - @movies.each do |movie|
       %tr
