--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -6,7 +6,7 @@
     = rating
     = check_box_tag "ratings[#{rating}]", 1, (checked = true if @select.include?(rating)), :id => 'ratings_#{rating}' 
   = submit_tag 'Refresh', :id => "ratings_submit"
-  
+//coments for git push  
 
 %table#movies.table.table-striped.col-md-12
   %thead
